<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvinfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text=" "
        android:textColor="#00FF00"
        app:layout_constraintBottom_toTopOf="@+id/btnSignup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnfp" />

    <TextView
        android:id="@+id/tvsp1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="155dp"
        android:layout_marginBottom="530dp"
        android:text="@string/indori_shop"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#000000"
        android:textSize="44sp"
        android:textStyle="bold"
        app:fontFamily="cursive"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/info2"
        android:layout_width="222dp"
        android:layout_height="23dp"
        android:text="  "
        android:textColor="#ff0000"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    <EditText
        android:id="@+id/etId"
        android:layout_width="325dp"
        android:layout_height="45dp"
        android:layout_marginTop="238dp"
        android:layout_marginBottom="448dp"
        android:background="#12000000"
        android:ems="10"
        android:hint="login ID"
        android:inputType="textPersonName"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etPwd"
        android:layout_width="328dp"
        android:layout_height="45dp"
        android:background="#12000000"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/btnLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etId"
        tools:visibility="visible" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="326dp"
        android:layout_height="45dp"
        android:layout_marginTop="365dp"
        android:layout_marginBottom="321dp"
        android:background="#3B3BFA"
        android:text="@string/log_in"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSignup"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="447dp"
        android:layout_height="44dp"
        android:background="@drawable/button_border"
        android:drawableTop="#000000"
        android:text="@string/dont_have_an_account_sign_up"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnfp"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="173dp"
        android:layout_height="30dp"
        android:background="#F9F9F9"
        android:text="@string/forget_password"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.103"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info2" />

</android.support.constraint.ConstraintLayout>